Add folders for images and stylesheet.

--- a/public/app/views/view.html
+++ b/public/app/views/view.html
@@ -2,4 +2,5 @@
 	<h1>Esta es la vista de view</h1>
 	<p>Ingrese nombre</p>
 	<input type="text" ng-model="nombre">
+  <img src="./images/ninja.png">
 </div>
