--- a/public/app/views/view.html
+++ b/public/app/views/view.html
@@ -1,6 +1,6 @@
 <div ng-controller="viewController">
 	<h1>Esta es la vista de view</h1>
-	<p>Ingrese nombre</p>
+	<p style="display:inline-block">Nombre del ninja: </p>
 	<input type="text" ng-model="nombre">
   <img src="./images/ninja.png">
 </div>
