--- a/public/app/views/view.html
+++ b/public/app/views/view.html
@@ -1,5 +1,5 @@
 <div ng-controller="viewController">
-	<h1>Esta es la vista de view</h1>
+	<h1>Esta es la vta de view</h1>
 	<p>Ingrese nombre</p>
 	<input type="text" ng-model="nombre">
   <img src="./images/ninja.png">
